--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.3",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
